<resources>
    <string name="app_name">Ticket Reader</string>

    <!-- Common -->
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="confirm">Confirmer</string>

    <!-- Strings related to login activity -->
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="username_required">Rentrer un nom d\'utilisateur</string>
    <string name="password_required">Rentrer un mot de passe</string>
    <string name="login_failed">"Nom d\'utilisateur ou mot de passe incorrect"</string>

    <!-- Strings related to menu activity -->
    <string name="menu_title">Menu principal</string>
    <string name="scan">Scanner un ticket</string>
    <string name="logout">Déconnexion</string>
    <string name="logout_question">Confirmer la déconnexion ?</string>
    <string name="scan_cancel_msg">Interrompu</string>

    <!-- Strings related to ticket displaying -->
    <string name="button_menu">Menu</string>
    <string name="information_title">Informations du ticket :</string>
    <string name="player_name">Nom du joueur :</string>
    <string name="player_gameName">Pseudo :</string>
    <string name="player_phone">Téléphone :</string>
    <string name="tournament">Tournois :</string>
    <string name="state_ticket">Validé :</string>
    <string name="button_validate">Valider le ticket</string>

    <!-- Strings related to error displaying -->
    <string name="error_title">Message d\'erreur</string>

    <!-- Connection errors -->
    <string name="error_network_timeout">Timeout lors de la connexion</string>

    <!-- API errors -->
    <string name="error_ticket_not_found">Le QR code scanné ne correspond pas à un ticket connu. Il peut y avoir eu une erreur lors du scan. \n
    S\'il y a eu un changement de joueur, il peut s\'agir d\'un ancien ticket, non valide à présent (un nouveau ticket est renvoyé en cas de changement de joueur). \n
    \n
    Demander aux membres du tournois et de l\'équipe Web si c\'est le cas.</string>

    <string name="error_participant_not_found">Le ticket n\'est attribué à aucun participant (problème dans la base de données). \n
    \n
    Demander de l\'aide à l\'équipe Web pour ce cas précis.</string>

    <string name="error_already_scanned">Le ticket présenté a déjà été scanné.</string>
    <string name="error_ticket_cancelled">Le ticket présenté a été annulé et n\'est plus valide.</string>


</resources>
