<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.TicketDisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/ticket_view_menu_button"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/colorYellow"
            android:text="@string/button_menu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="20dp"
            android:paddingBottom="3dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/information_title"
            />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ticket_view_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:layout_gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/player_name" />

            <TextView
                android:id="@+id/ticket_view_name"
                android:background="@null"
                android:focusableInTouchMode="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ticket_view_gameName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:layout_gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/player_gameName" />

            <TextView
                android:id="@+id/ticket_view_gameName"
                android:background="@null"
                android:focusableInTouchMode="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ticket_view_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:layout_gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/player_phone" />

            <TextView
                android:id="@+id/ticket_view_phone"
                android:background="@null"
                android:focusableInTouchMode="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ticket_view_tournament_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:layout_gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/tournament" />

            <TextView
                android:id="@+id/ticket_view_tournament"
                android:background="@null"
                android:focusableInTouchMode="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ticket_view_state_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"

                android:layout_gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/state_ticket" />

            <TextView
                android:id="@+id/ticket_view_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ticket_view_validate_btn_layout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/ticket_view_validate_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="20dp"
                android:background="@color/colorBlueDark"
                android:text="@string/button_validate" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ticket_view_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="3dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorRed" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
